--- a/scss/utilities/_globals.scss
+++ b/scss/utilities/_globals.scss
@@ -1,5 +1,5 @@
 :root {
-    --font-sans: 'Arial', sans-serif;
+    --font-sans: 'Abolition';
 
     --section-gap: 8rem;
     --section-gap-inner: calc( var(--section-gap) * 0.75 );
