--- a/scss/pages/home/_hero.scss
+++ b/scss/pages/home/_hero.scss
@@ -1,3 +1,73 @@
 .hero {
-    background-color: black;
+    background-color: var(--color-light);
+    height: 100vh;
+    display: grid;
+    padding: 32px;
+    color: var(--color-light);
+    font-style: italic;
+
+
+    &__inner {
+        background-image: url('Bilder/bgimage.jpg');
+        display: grid;
+        grid-template-rows: 100px 1fr 100px;
+        //eller padding-top: 100px;
+        grid-template-areas: 
+        'hero-header'
+        'hero-main'
+        'hero-footer';
+        align-items: center;
+        position: relative;
+        top: 0;
+    }
+
+    &__bgimage {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        left: 0;
+        top: 0;
+        object-fit: cover; 
+    }
+
+    &__main {
+        grid-area: hero-main;
+        padding: var(--gap-m) var(--gap-xl);
+        position: relative;
+    }
+
+    &__footer {
+        grid-area: hero-footer;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 var(--gap-m);
+        position: relative; //Footer syns nu, doldes pga heriarki
+    }
+
+    &__content {
+        max-width: 50rem;
+        width: 100%;
+
+    }
+
+    &__readmore {
+        color: white;
+        text-decoration: none;
+    }
+
+    .social {
+        white-space: nowrap;
+        //Hänvisar till närmsta nestlade föräldern   
+    }
+}
+
+.intro {
+
+    padding-right: var(--gap-m);
+
+    &__title {
+        font-size: 5rem;
+        margin: 0;
+        font-weight: lighter;
+    }
 }
