--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,7 +1,7 @@
 #map {
     width: 100%;
     height: 400px;
-    background-image: url('Bilder/Map.jpg');
+    background-image: url('Bilder/Map.png');
     background-size: cover;
     background-position: center;
 
@@ -11,6 +11,10 @@
     background-color: #2D343A;
     font-family: industry;
     font-size: 16px;
+
+    &__social {
+      margin-left: 200px;
+    }
 
     &__copyright {
       color: white;
