--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,7 +2,7 @@
     width: 100%;
     display: grid;
     padding: 0 var(--gap-xl);
-    z-index: 990; //ligger över 999 lager
+    z-index: 990;
     position: absolute;
     margin-top: 50px;
 
