--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 #map {
     width: 100%;
-    height: 400px;
+    height: 500px;
     background-image: url('Bilder/Map.png');
     background-size: cover;
     background-position: center;
@@ -14,6 +14,7 @@
 
     &__social {
       margin-left: 200px;
+      margin-top: 40px;
     }
 
     &__copyright {
@@ -49,16 +50,14 @@
         p {
           margin-top: 0;
         }
-      }
     }
+}
   
   .footer_menu {
       text-align: left;
       display: flex;
       flex-direction: column; //Vill att menyn ska vara vertikal
       padding-top: 30px;
-      //align-items: center;
-      //justify-content: center; 
   
       &__list {
         list-style: none;
@@ -70,7 +69,12 @@
         text-decoration: none;
         color: white;
         text-align: left;
+
+        &:hover {
+          color:#FD3E1D;
       }
+    }
+    
   
       &__item {
         margin: 10px 0;
@@ -82,6 +86,7 @@
       display: flex;
       align-items: center;
       flex-direction: column;
+      padding-top: 30px;
     }
 
   }
