--- a/scss/pages/home/_hero.scss
+++ b/scss/pages/home/_hero.scss
@@ -1,9 +1,7 @@
 .hero {
-    background-color: var(--color-light);
     min-height: 100vh;
     display: grid;
-    padding: 32px;
-    color: var(--color-light);
+    color: white;
     font-style: italic;
 
     background: url(Bilder/bgimage.jpg) no-repeat;
@@ -58,6 +56,10 @@
         align-items: center;
         color: #fff;
         margin-left: 30px;
+
+        &:hover {
+            color:#FD3E1D;
+        }
     }
 
     .social {
@@ -68,7 +70,12 @@
 
     .arrow {
         margin-right: 20px;
-    }
+        transition: transform 0.4s ease; //Gör animationen mer följsam
+
+        &:hover {
+            transform: translateY(10px);
+        }
+        
 }
 
 .intro {
@@ -81,4 +88,25 @@
         font-weight: lighter;
         padding-bottom: 40px;
     }
+}
+
+#MemberBtn {
+    height: 60px;
+    transition: transform 0.4s ease;
+
+    &:hover {
+        transform: scale(1.1);
+    }
+}
+
+#BookBtn {
+    height: 60px;
+    margin-right: 15px;
+    transition: transform 0.4s ease;
+
+    &:hover {
+        transform: scale(1.1);
+    }
+
+}
 }
