--- a/style.css
+++ b/style.css
@@ -108,8 +108,11 @@ h1, h2, h3, h4, h5, h6 {
 .menu__link {
   font-style: italic;
   text-decoration: none;
-  color: var(--color-light);
-  font-size: var(--font-size-2);
+  color: white;
+  font-size: 25px;
+}
+.menu__link:hover {
+  color: #FD3E1D;
 }
 .menu__item--current {
   border-bottom: 2px solid #FD3E1D;
@@ -117,7 +120,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #map {
   width: 100%;
-  height: 400px;
+  height: 500px;
   background-image: url("Bilder/Map.png");
   background-size: cover;
   background-position: center;
@@ -130,6 +133,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .footer__social {
   margin-left: 200px;
+  margin-top: 40px;
 }
 .footer__copyright {
   color: white;
@@ -177,6 +181,9 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
   text-align: left;
 }
+.footer .footer_menu__link:hover {
+  color: #FD3E1D;
+}
 .footer .footer_menu__item {
   margin: 10px 0;
   padding-bottom: 7px;
@@ -185,6 +192,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding-top: 30px;
 }
 
 .selections__content {
@@ -201,6 +209,29 @@ h1, h2, h3, h4, h5, h6 {
   padding-left: 50px;
   text-align: left;
   color: white;
+  position: relative;
+  transition: transform 0.4s ease;
+}
+.box:hover {
+  transform: scale(1.1);
+}
+.box__footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
+}
+
+.box::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 90px 90px 0 0;
+  border-color: transparent #0584FF transparent transparent;
 }
 
 .box h2 {
@@ -229,11 +260,6 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
 }
 
-#pil {
-  margin-top: -33px;
-  margin-left: 270px;
-}
-
 .box2 {
   width: 404px;
   height: 246px;
@@ -242,6 +268,23 @@ h1, h2, h3, h4, h5, h6 {
   padding-left: 50px;
   text-align: left;
   color: white;
+  position: relative;
+  transition: transform 0.4s ease;
+}
+.box2:hover {
+  transform: scale(1.1);
+}
+
+.box2::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 90px 90px 0 0;
+  border-color: transparent rgba(63, 74, 83, 0.21) transparent transparent;
 }
 
 .box2 h2 {
@@ -264,11 +307,6 @@ h1, h2, h3, h4, h5, h6 {
   color: #3F4A53;
 }
 
-#pil2 {
-  margin-top: -20px;
-  margin-left: 270px;
-}
-
 .box3 {
   width: 404px;
   height: 246px;
@@ -277,6 +315,23 @@ h1, h2, h3, h4, h5, h6 {
   padding-left: 50px;
   text-align: left;
   color: white;
+  position: relative;
+  transition: transform 0.4s ease;
+}
+.box3:hover {
+  transform: scale(1.1);
+}
+
+.box3::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 90px 90px 0 0;
+  border-color: transparent rgba(63, 74, 83, 0.21) transparent transparent;
 }
 
 .box3 h2 {
@@ -299,19 +354,26 @@ h1, h2, h3, h4, h5, h6 {
   color: rgba(63, 74, 83, 0.53);
 }
 
-#pil3 {
-  margin-top: -20px;
-  margin-left: 270px;
+#selection_arrow {
+  transition: transform 0.4s ease;
+}
+#selection_arrow:hover {
+  transform: translateX(5px);
 }
 
 .news {
   display: grid;
-  grid-template-columns: var(--grid-container);
+  grid-template-columns: minmax(0rem, 1fr) [inner-start] minmax(0, var(--page-inner)) [inner-end] minmax(0rem, 1fr);
+  padding-right: 60px;
 }
 .news__buttons {
   display: flex;
   margin-bottom: 50px;
   align-items: center;
+}
+
+.news-side__image {
+  padding-bottom: 12px;
 }
 
 .news__inner {
@@ -325,12 +387,21 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 170px;
 }
 
-#ReadmoreBtn {
+#Knapp_orange {
   margin-right: 20px;
+  width: 100px;
+  height: 50px;
+  transition: transform 0.4s ease;
+}
+#Knapp_orange:hover {
+  transform: scale(1.1);
 }
 
-#OrangeReadMoreBtn {
-  margin-right: 20px;
+#dela {
+  transition: transform 0.4s ease;
+}
+#dela:hover {
+  transform: scale(1.1);
 }
 
 .news__content {
@@ -392,7 +463,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
   font-style: italic;
   margin: 0;
-  padding-bottom: 33px;
+  padding-bottom: 23px;
   max-width: 279px;
 }
 
@@ -408,7 +479,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .banner {
-  min-height: 60vh;
+  min-height: 70vh;
   display: grid;
   padding: 60px;
 }
@@ -416,7 +487,7 @@ h1, h2, h3, h4, h5, h6 {
   color: white;
   font-family: Abolition;
   font-size: 88px;
-  min-width: 1276px;
+  min-width: 1000px;
   font-weight: 300;
   font-style: italic;
   margin: 0;
@@ -436,11 +507,29 @@ h1, h2, h3, h4, h5, h6 {
   background: url(Bilder/Bg.png) no-repeat;
   background-size: cover;
   background-position: center center;
+  position: relative;
+}
+.banner__inner::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 90px 90px 0 0;
+  border-color: transparent #0584FF transparent transparent;
 }
 .banner__main {
   grid-area: hero-main;
   padding: var(--gap-m) var(--gap-xl);
   position: relative;
+}
+.banner__footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
 }
 .banner__content {
   max-width: 50rem;
@@ -450,7 +539,6 @@ h1, h2, h3, h4, h5, h6 {
 .openinghours {
   display: grid;
   padding: 0 var(--gap-xl);
-  margin-top: 50px;
 }
 .openinghours__header {
   display: flex;
@@ -480,15 +568,150 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 60px;
+  padding-bottom: 90px;
+}
+.openinghours .reception {
+  width: 425px;
+  height: 547px;
+  background-color: #3F4A53;
+  padding-top: 50px;
+  padding-left: 50px;
+  text-align: left;
+  color: white;
+  position: relative;
+}
+.openinghours .reception__opening_hours {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(230, 230, 230, 0.07);
+  padding: 10px;
+  max-width: 320px;
+}
+.openinghours .reception__opening_hours--odd {
+  background-color: rgba(230, 230, 230, 0);
+}
+.openinghours .reception__opening_hours_day {
+  font-weight: 700;
+  font-family: Industry;
+  font-size: 20px;
+  color: rgba(230, 230, 230, 0.9);
+}
+.openinghours .reception__opening_hours_day--current {
+  color: #FD3E1D;
+}
+.openinghours .reception__opening_hours_hours {
+  font-weight: 400;
+  font-family: Industry;
+  font-size: 20px;
+  color: rgba(230, 230, 230, 0.9);
+}
+.openinghours .reception__opening_hours_hours--current {
+  color: #FD3E1D;
+}
+.openinghours .reception::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 90px 90px 0;
+  border-color: transparent rgba(230, 230, 230, 0.21) transparent transparent;
+}
+.openinghours .reception h2 {
+  font-size: 61px;
+  font-family: Abolition;
+  font-style: italic;
+  font-weight: 300;
+  margin: 0;
+  padding-bottom: 32px;
+}
+.openinghours .reception h4 {
+  font-size: 10.6px;
+  font-family: Industry;
+  font-weight: 300;
+  margin: 0;
+  padding-bottom: 32px;
+  padding-top: 5px;
+  color: rgba(230, 230, 230, 0.42);
+}
+.openinghours .bastu {
+  width: 425px;
+  height: 547px;
+  background-color: white;
+  padding-top: 50px;
+  padding-left: 50px;
+  text-align: left;
+}
+.openinghours .bastu h2 {
+  font-size: 61px;
+  font-family: Abolition;
+  font-style: italic;
+  font-weight: 300;
+  margin: 0;
+  color: #3F4A53;
+  padding-bottom: 32px;
+}
+.openinghours .keycard {
+  width: 425px;
+  height: 547px;
+  background-color: white;
+  padding-top: 50px;
+  text-align: left;
+}
+.openinghours .keycard__opening_hours {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgba(63, 74, 83, 0.07);
+  background-size: auto;
+  padding: 10px;
+  max-width: 320px;
+}
+.openinghours .keycard__opening_hours--odd {
+  background-color: rgba(230, 230, 230, 0);
+}
+.openinghours .keycard__opening_hours_day {
+  font-weight: 700;
+  font-family: Industry;
+  font-size: 20px;
+  color: #707070;
+}
+.openinghours .keycard__opening_hours_day--current {
+  color: #0584FF;
+}
+.openinghours .keycard__opening_hours_hours {
+  font-weight: 400;
+  font-family: Industry;
+  font-size: 20px;
+  color: #707070;
+}
+.openinghours .keycard__opening_hours_hours--current {
+  color: #0584FF;
+}
+.openinghours .keycard h2 {
+  font-size: 61px;
+  font-family: Abolition;
+  font-style: italic;
+  font-weight: 300;
+  margin: 0;
+  color: #3F4A53;
+  padding-bottom: 32px;
+}
+
+#Knapp {
+  transition: transform 0.4s ease;
+}
+#Knapp:hover {
+  transform: scale(1.1);
 }
 
 .hero {
-  background-color: var(--color-light);
   min-height: 100vh;
   display: grid;
-  padding: 32px;
-  color: var(--color-light);
+  color: white;
   font-style: italic;
   background: url(Bilder/bgimage.jpg) no-repeat;
   background-size: cover;
@@ -533,6 +756,9 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   margin-left: 30px;
 }
+.hero__readmore:hover {
+  color: #FD3E1D;
+}
 .hero .social {
   display: flex;
   align-items: center;
@@ -540,16 +766,34 @@ h1, h2, h3, h4, h5, h6 {
 }
 .hero .arrow {
   margin-right: 20px;
+  transition: transform 0.4s ease;
 }
-
-.intro {
+.hero .arrow:hover {
+  transform: translateY(10px);
+}
+.hero .intro {
   padding-right: var(--gap-m);
 }
-.intro__title {
+.hero .intro__title {
   font-size: 100px;
   margin: 0;
   font-weight: lighter;
   padding-bottom: 40px;
+}
+.hero #MemberBtn {
+  height: 60px;
+  transition: transform 0.4s ease;
+}
+.hero #MemberBtn:hover {
+  transform: scale(1.1);
+}
+.hero #BookBtn {
+  height: 60px;
+  margin-right: 15px;
+  transition: transform 0.4s ease;
+}
+.hero #BookBtn:hover {
+  transform: scale(1.1);
 }
 
 /*# sourceMappingURL=style.css.map */
